--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
@@ -25,18 +14,15 @@
   background-image: url(./img/bigbluequilt.jpg);
 }
 
-.App-link {
-  color: #61dafb;
-}
+.blog-title {
+  font-family: Sans-serif;
+  color: black;
+  padding-top: 100px; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.blog-text {
+  font-family: Sans-serif;
+  color: black; }
+
 .jelly{
   color: red;
 }
