fontaweome icons workings. hust added a link between head tags

--- a/src/App.css
+++ b/src/App.css
@@ -30,5 +30,12 @@
   background: cover;
   
 }
+.belly{
+  background-color: lightgray;
+  background-size:contain;
+  background-position:top;
+  background: cover;
+  
+}
 
  
